--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel='stylesheet' type='text/css' href='styles.css'>
-	<title></title>
+	<title>CodeReview-01</title>
 </head>
 <body>
 	<div class="wholebody">
@@ -12,13 +12,11 @@
 				Gerald-Full Stack Web Developer
 			</span>
 			<span>
-				<img src="img/logo.png" alt="logo" width=50%>
+				<img src="img/logo.png" alt="logo" width=35%>
 			</span>
 		</header>
 
-		
-			<nav>
-			
+			<nav>		
 				<ul id="navbar">
 					<li>Home</li>
 					<li>Blog</li>
@@ -27,47 +25,47 @@
 				</ul>
 			</nav>
 		
-
-		<h1 id="">
+		<h1>
 			<div> 
 				This is my first <br>
 				website :D			
 			</div>
 		</h1>
 
-		<span>
-			<img src="img/Phone.png" alt="Phone" width=90%>
+		<div>
+			<img src="img/Phone.png" alt="Phone" width=90% height=10%>
 			<div class="picdesc">
 				Samsung Galaxy S 11/S20 Plus video leaks showing phone in real life!
 			</div>
-		</span>
+		</div>
 
-		<span>
-			<img src="img/Debit_card_ATM.jpg" alt="Debit_card_ATM" width=45%>
-			<div class="picdesc">
-				Police are investigating three ATM <br>
-				explosions in two Florida counties
-				
+		<div>				
+			<div id="leftpic">							
+				<img src="img/Debit_card_ATM.jpg" alt="Debit_card_ATM" width=80%>
+				<div class="picdesc">
+					Police are investigating three ATM <br>
+					explosions in two Florida counties					
+				</div>
 			</div>
 
-
-			<img src="img/Taxify-Scooters.jpg" alt="Taxify-Scooters" width=45%>
-			<div class="picdesc">
-				E-scooter firm Bolt pulls out of 12 <br>
-				cities		
+			<div id="rightpic">
+							
+				<img src="img/Taxify-Scooters.jpg" alt="Taxify-Scooters" width=80%>
+				<div class="picdesc">
+					E-scooter firm Bolt pulls out of 12 <br>
+					cities		
+				</div>
 			</div>
-		</span>
-
+		</div>
 
 		<footer>
-			<img src="img/logo.png" alt="logo" width=40%>
+			<img src="img/logo.png" alt="logo" width=20%>
 			
 			<div>
 				Gerald-CodeFactory 2020		
 			</div>
 		</footer>
 	</div>
-
 
 </body>
 </html>
