added 3 additional sites

--- a/indexold.html
+++ b/indexold.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel='stylesheet' type='text/css' href='stylesnew.css'>
+	<link rel='stylesheet' type='text/css' href='styles.css'>
 	<title>CodeReview-01</title>
 </head>
 <body>
 	<div class="wholebody">
-		<header>		
+		<header>
+			<h2>
+			This was the privious version of the website.
+			The current version in more responsive and looks fine in different sized browsers.
+			</h2>
 			<span id="nameinheader">
 				Gerald-Full Stack Web Developer
 			</span>
@@ -32,7 +36,7 @@
 		</h1>
 
 		<div>
-			<img src="img/Phone.png" alt="Phone" width=90% height=10%>
+			<img src="img/Phone.png" alt="Phone" width=1400px height=400px>
 			<div class="picdesc">
 				Samsung Galaxy S 11/S20 Plus video leaks showing phone in real life!
 			</div>
@@ -40,7 +44,7 @@
 
 		<div>				
 			<div id="leftpic">							
-				<img src="img/Debit_card_ATM.jpg" alt="Debit_card_ATM" width=90% height=10%>
+				<img src="img/Debit_card_ATM.jpg" alt="Debit_card_ATM" width=600px height=400px>
 				<div class="picdesc">
 					Police are investigating three ATM <br>
 					explosions in two Florida counties					
@@ -49,22 +53,18 @@
 
 			<div id="rightpic">
 							
-				<img src="img/Taxify-Scooters.jpg" alt="Taxify-Scooters" width=90% height=10%>
+				<img src="img/Taxify-Scooters.jpg" alt="Taxify-Scooters" width=600px height=400px>
 				<div class="picdesc">
 					E-scooter firm Bolt pulls out of 12 <br>
 					cities		
 				</div>
 			</div>
 		</div>
-	 
-		<div style= 'visibility: hidden;'> <!-- least elegant solution  to keep formatting intact in different sizes-->
-			<p>invisible text</p>
-		</div>
 
 		<footer>
 			<img src="img/logo.png" alt="logo" width=20%>
 			
-			<div id="nameinbottom">
+			<div>
 				Gerald-CodeFactory 2020		
 			</div>
 		</footer>
